--- a/amvera.yml
+++ b/amvera.yml
@@ -3,12 +3,10 @@ meta:
   toolchain:
     name: npm
     version: 18
-
 build:
-  additionalCommands: npm run build
-  additionalCommands: npm run start
   artifacts:
-  "*": /
-
+    '*': /
 run:
   scriptName: dist/index.js
+  persistenceMount: /data
+  containerPort: 80
