--- a/amvera.yml
+++ b/amvera.yml
@@ -1,9 +1,11 @@
 meta:
   environment: node
   toolchain:
-    name: npm
+    name: yarn
     version: 18
 build:
+  additionalCommands: yarn run build
+  additionalCommands: yarn run start
   artifacts:
     '*': /
 run:
