--- a/amvera.yml
+++ b/amvera.yml
@@ -1,11 +1,11 @@
 meta:
   environment: node
   toolchain:
-    name: yarn
+    name: npm
     version: 18
 build:
-  additionalCommands: yarn run build
-  additionalCommands: yarn run start
+  additionalCommands: npm run build
+  additionalCommands: npm run start
   artifacts:
     '*': /
 run:
