--- a/amvera.yml
+++ b/amvera.yml
@@ -4,8 +4,8 @@ meta:
     name: yarn
     version: 18
 build:
-  additionalCommands: yarn run build
-  additionalCommands: yarn run start
+  // additionalCommands: yarn run build
+  // additionalCommands: yarn run start
   artifacts:
     '*': /
 run:
