--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
     "@types/express": "^4.17.17",
-    "express": "^4.18.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
