--- a/amvera.yml
+++ b/amvera.yml
@@ -4,6 +4,8 @@ meta:
     name: npm
     version: 18
 build:
+  additionalCommands: npm run build
+  additionalCommands: npm run start
     artifacts:
     '*': /
 run:
