--- a/amvera.yml
+++ b/amvera.yml
@@ -1,11 +1,11 @@
 meta:
   environment: node
   toolchain:
-    name: npm
+    name: yarn
     version: 18
 build:
-  additionalCommands: npm run build
-  additionalCommands: npm run start
+  additionalCommands: yarn run build
+  additionalCommands: yarn run start
     artifacts:
     '*': /
 run:
