--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "be-sutra",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://4ebuard.github.io/be-sutra",
   "license": "MIT",
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon --inspect dist/index.js",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "gh-pages": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
