--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@types/gh-pages": "^3.2.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
