--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.17",
     "gh-pages": "^5.0.0",
     "ts-node": "^10.9.1",
+    "dokku": "^0.1.2",
     "typescript": "^5.0.4"
   }
 }
