--- a/package.json
+++ b/package.json
@@ -8,17 +8,13 @@
     "watch": "tsc -w",
     "dev": "nodemon --inspect dist/index.js",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "start": "node dist/index.js"
   },
   "dependencies": {
-    "@types/gh-pages": "^3.2.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "gh-pages": "^5.0.0",
     "ts-node": "^10.9.1",
     "dokku": "^0.1.2",
     "typescript": "^5.0.4"
