--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "ts-node": "^10.9.1",
     "dokku": "^0.1.2",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
 }
